Final notebook on AIS for cosmo - not saving the chain as txt

--- a/AISCosmo.ipynb
+++ b/AISCosmo.ipynb
@@ -229,7 +229,7 @@
     "sigStart = np.array([0.005,0.007,0.002]) # sigma from Planck value\n",
     "\n",
     "iterations = 20000\n",
-    "M.sampler(wStart, wrange, iterations, save_chain)\n"
+    "M.sampler(wStart, wrange, iterations)\n"
    ]
   },
   {
